--- a/meu-projeto/src/componentes/navbar/navbar.css
+++ b/meu-projeto/src/componentes/navbar/navbar.css
@@ -128,6 +128,7 @@ nav {
 
   .hamburger {
     display: flex;
+    margin-left: 0;
   }
 
   .menu li {
