--- a/meu-projeto/src/componentes/servicos/servicos.css
+++ b/meu-projeto/src/componentes/servicos/servicos.css
@@ -8,7 +8,7 @@
     padding-bottom: 0.5em;
     margin-top: 0.8em;
     text-align: left;
-    margin-left: -48rem;
+    margin-left: 0;
 }
 
 .services-section {
