--- a/meu-projeto/src/pages/home.css
+++ b/meu-projeto/src/pages/home.css
@@ -8,7 +8,3 @@
   opacity: 1;
   transform: translateY(0);
 }
-  
-body {
-  overflow: hidden;
-}
